# resharp-grep

./: .gitignore  Cargo.toml  README.md  build-dist.sh  flake.nix  justfile  make-gh-release.sh  resharp.nix
src/: args.rs  main.rs  printer.rs  search.rs  walk.rs
tests/: bench.sh  integration.rs
