[package]
name = "resharp-grep"
version = "0.2.0"
edition = "2021"
description = "a grep-like search tool powered by the resharp regex engine"
license = "MIT"
authors = ["Ian Erik Varatalu"]
repository = "https://github.com/ieviev/resharp-grep"
homepage = "https://github.com/ieviev/resharp-grep"
keywords = ["grep", "regex", "search", "cli", "intersection"]
categories = ["command-line-utilities", "text-processing"]
rust-version = "1.70"

[[bin]]
name = "re"
path = "src/main.rs"

[dependencies]
anyhow = "1"
bstr = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
ignore = "0.4"
memchr = "2"
memmap2 = "0.9"
resharp = "0.3.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
termcolor = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
